# MobiDB-lite

./: .gitignore  LICENSE  README.md  changelog.txt  config.ini  mobidb_lite.py  pyproject.toml  readme.md  requirements.txt
binx/disembl/: DisEMBL.python3.py
binx/seg/bin64/: README  genwin.c  genwin.h  hiseg.c  makefile  seg.c  seg.sgi.iris5  seg.sun.sunos4
examples/: multi.fasta  single.fasta
mdblib/: cli.py  consensus.py  logger.py  outformats.py  plot.py  prediction.py  predictor.py  protein.py  setdirs.py  states.py  streams.py
mdbtest/: test_data.py  test_mobidb_lite.py
src/mobidb_lite/: __main__.py  anchor.py  consensus.py  disembl.py  fess.py  globplot.py  nu_svr.py
src/mobidb_lite/data/: svr_model_nu_2.joblib
